--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,24 @@
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+html, body {
+    padding: 0;
+    margin: 0;
+    font-family: SofiaPro Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+}
+
+@font-face {
+    font-family: Hurme;
+    src: url(../public/fonts/hurme-geometric-bold.woff2);
+}
+
+@font-face {
+    font-family: SofiaPro;
+    src: url(../public/fonts/sofia-pro-regular.woff2);
 }
 
 a {
-  color: inherit;
-  text-decoration: none;
+    color: inherit;
+    text-decoration: none;
 }
 
 * {
-  box-sizing: border-box;
+    box-sizing: border-box;
 }
