--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,11 @@
+html {
+    box-sizing: border-box;
+}
+
+*, *:before, *:after {
+    box-sizing: inherit;
+}
+
 html, body {
     padding: 0;
     margin: 0;
@@ -21,4 +29,8 @@ a {
 
 * {
     box-sizing: border-box;
+}
+
+h1, h2, h3, h4, h5, h6 {
+    font-family: Hurme;
 }
