--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,14 +6,11 @@ html {
     box-sizing: inherit;
 }
 
-html, body {
+html, body, #__next {
     padding: 0;
     margin: 0;
     font-family: SofiaPro Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-}
-
-body {
-    height: 100vh;
+    position: relative;
 }
 
 @font-face {
