--- a/styles/globals.css
+++ b/styles/globals.css
@@ -16,11 +16,13 @@ html, body, #__next {
 @font-face {
     font-family: Hurme;
     src: url(../public/fonts/hurme-geometric-bold.woff2);
+    font-display: swap;
 }
 
 @font-face {
     font-family: SofiaPro;
     src: url(../public/fonts/sofia-pro-regular.woff2);
+    font-display: swap;
 }
 
 a {
