--- a/styles/globals.css
+++ b/styles/globals.css
@@ -9,7 +9,7 @@ html {
 html, body, #__next {
     padding: 0;
     margin: 0;
-    font-family: SofiaPro Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+    font-family: SofiaPro, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
     position: relative;
 }
 
@@ -35,7 +35,7 @@ a {
 }
 
 h1, h2, h3, h4, h5, h6 {
-    font-family: Hurme;
+    font-family: Hurme, SofiaPro, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, "Helvetica Neue", sans-serif;
 }
 
 p.price-display {
